# sboptr

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
examples/: example.cpp
include/sboptr/: sboptr.hpp
tests/sboptr/: sboptr_tests.cpp
